# rusty_v8

./: .gitignore  0001_BUILD_PATCH_RISCV_TOOLCHAIN.patch  0003_V8_DO_NOT_FORCE_ENABLE_PTR_CMPRSN.patch  0004_V8_SWITCH_OFF_LARGER_CAGED_HEAPS.patch  0005_V8_ALIGN_CAGED_HEAP_TO_PAGE_SIZE.patch  01_PATCH_RISCV_TOOLCHAIN.patch  02_PATCH_V8_INTERNAL.patch  args.gn  build.rs  build.sh  flake.nix  rust-toolchain.toml  setup.sh  shell.nix
